[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/interactions/pause_menu.png" type="Texture" id=1]
[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/interactions/notecard.png" type="Texture" id=3]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 100, 100 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 100, 100 )

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 100, 100 )

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 21.0
margin_top = 17.0
margin_right = 85.0
margin_bottom = 82.0

[node name="Button" type="Button" parent="MarginContainer"]
margin_right = 64.0
margin_bottom = 65.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 1 )

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_left = 441.0
margin_top = 359.0
margin_right = 225.0
margin_bottom = 225.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer2"]
margin_right = 225.0
margin_bottom = 225.0
texture = ExtResource( 3 )

[node name="Button" type="Button" parent="MarginContainer2/TextureRect"]
margin_right = 12.0
margin_bottom = 20.0

[connection signal="mouse_entered" from="MarginContainer/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="MarginContainer/Button" to="." method="_on_Button_pressed"]
